project/gke-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-ns
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project-frontend
          image: PROJECT/FRONTEND_IMAGE
          resources:
            limits:
              memory: "128Mi"
              cpu: "150m"
        - name: project-backend
          image: PROJECT/BACKEND_IMAGE
          resources:
            limits:
              memory: "128Mi"
              cpu: "150m"
