project/gke-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
  namespace: project-ns
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - name: frontend
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: api
      port: 8080
      protocol: TCP
      targetPort: 3001
