project/gke-manifests/statefulset.yaml
apiVersion: v1 # Includes the Service for lazyness
kind: Service
metadata:
  name: postgres-svc
  namespace: project-ns
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgresapp

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: project-ns
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
            # Run table creation on init
            - name: project-db-seeding
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: project-db-seeding
          configMap:
            name: project-create-db-cm
  volumeClaimTemplates:
    - metadata:
        name: pg-data
        namespace: project-ns
      spec:
        accessModes: ["ReadWriteOnce"]
        # storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
